syntax = "proto3";

package bye;

service ByeService {
  rpc sayBye (ByeRequest) returns (ByeResponse);
}

message ByeRequest {
  string name = 1;
}

message ByeResponse {
  string message = 1;
}
